--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^1.0.0-beta.10",
+    "@nextui-org/react": "1.0.0-beta.12",
     "@reduxjs/toolkit": "^1.9.5",
     "apexcharts": "^3.35.5",
     "axios": "^1.4.0",
