--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.10",
     "@reduxjs/toolkit": "^1.9.5",
-    "apexcharts": "^3.35.5",
+    "@types/node": "18.11.19",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "next": "12.3.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
-    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "react-hot-toast": "^2.4.1",
@@ -32,5 +31,24 @@
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "typescript": "4.8.3"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "optionalDependencies": {
+    "typescript": "4.2.3",
+    "next-sitemap": "^4.2.2"
   }
 }
