--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "eslint-config-next": "12.3.0",
     "typescript": "4.8.3"
   },
+  "resolutions": {
+    "next/@swc/helpers": "0.4.36"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
