--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "eslint-config-next": "12.3.0",
     "typescript": "4.8.3"
   },
-  "resolutions": {
-    "next/@swc/helpers": "0.4.36"
+  "overrides": {
+    "next": {
+      "@swc/helpers": "0.4.36"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
